Added get_servers, get_tools , call_tools to MCP HUB

--- a/hub/app/servers/stdio-config.json
+++ b/hub/app/servers/stdio-config.json
@@ -6,6 +6,14 @@
         "-y",
         "@modelcontextprotocol/server-everything"
       ]
-    }
+    },
+    "fetch": {
+      "command": "python",
+      "args": ["-m", "mcp_server_fetch"]
+    },
+    "time": {
+        "command": "python",
+        "args": ["-m", "mcp_server_time"]
+    }  
   }
 }
