--- a/compose.yaml
+++ b/compose.yaml
@@ -2,6 +2,7 @@ services:
 
   jupyter:
     build: ./jupyter
+    container_name: jupyter
     ports:
       - 8888:8888
     volumes:
@@ -44,6 +45,7 @@ services:
 
   adminer:
     image: adminer
+    profiles: [DBdebug]
     ports:
       - 8080:8080
 
@@ -103,6 +105,7 @@ services:
 
   mongo-express:
     image: mongo-express
+    profiles: [DBdebug]
     ports:
       - 8081:8081
     env_file:
